;;;; -*- coding: utf-8; -*-
changes in sbcl-1.0.19 relative to 1.0.18:
  * bug fix: compiler no longer makes erronous assumptions in the
    presense of non-foldable SATISFIES types.

changes in sbcl-1.0.18 relative to 1.0.17:
  * minor incompatible change: SB-SPROF:WITH-PROFILING now by default
    profiles only the current thread.
  * minor incompatible change: changes to SYMBOL-VALUE of constants
    defined with DEFCONSTANT now signal an error.
  * enhancement: SB-SPROF now has support for wallclock profiling,
    and is also able to profile specific threads. REPORT output
    has also additional sorting options.
  * enhancement: better pretty-printing of DEFPACKAGE forms.  (Thanks
    to Michael Weber)
  * optimization: structure allocation has been improved
    ** constructors created by non-toplevel DEFSTRUCTs are ~40% faster.
    ** out of line constructors are ~10% faster.
    ** inline constructors are ~15% faster.
    ** inline constructors are capable of dynamic extent allocation
       (generally on x86 and x86-64, in some cases on other platforms
       as well.)
  * optimization: simple uses of HANDLER-CASE and HANDLER-BIND no
    longer cons.
  * optimization: file compiler is now able to coalesce non-circular
    lists, non-base strings, and bit-vectors. Additionally, constants
    are never referenced through SYMBOL-VALUE at runtime.
  * optimization: code defining methods on PRINT-OBJECT (and other
    generic functions in the COMMON-LISP package) now loads faster.
  * bug fix: EAI_NODATA is deprecated since RFC 3493. Stop using it
    in sb-bsd-sockets.
  * bug fix: if COMPILE-FILE aborts due to an unwind, the partial
    fasl is now deleted. (reported by Attila Lendvai)
  * bug fix: READ-LINE always returned NIL for the last line in files.
    (reported by Yoshinori Tahara)
  * bug fix: more accurate disassembly annotations of foreign function
    calls.  (thanks to Andy Hefner)
  * bug fix: trimming non-simple strings and non-string string