@@ -1403,7 +1403,12 @@ is a good idea, but see SB-SYS re. blurring of boundaries."
                "MAPC-MEMBER-TYPE-MEMBERS" "MAPCAR-MEMBER-TYPE-MEMBERS"
                "MEMBER-TYPE" "MEMBER-TYPE-MEMBERS" "MEMBER-TYPE-P"
                "MEMBER-TYPE-SIZE" "MERGE-BITS"
-               "MODIFIED-NUMERIC-TYPE" "MUTATOR-SELF" "NAMED-TYPE"
+               "MODIFIED-NUMERIC-TYPE"
+               "MOST-NEGATIVE-EXACTLY-DOUBLE-FLOAT-FIXNUM"
+               "MOST-NEGATIVE-EXACTLY-SINGLE-FLOAT-FIXNUM"
+               "MOST-POSITIVE-EXACTLY-DOUBLE-FLOAT-FIXNUM"
+               "MOST-POSITIVE-EXACTLY-SINGLE-FLOAT-FIXNUM"
+               "MUTATOR-SELF" "NAMED-TYPE"
                "NAMED-TYPE-NAME" "NAMED-TYPE-P" "NATIVE-BYTE-ORDER"
                "NEGATE" "NEGATION-TYPE" "NEGATION-TYPE-TYPE"
                "NEVER-SUBTYPEP" "NIL-ARRAY-ACCESSED-ERROR"
